# toki-client

./: .clang-format  CMakeLists.txt
cmake/imgui/: CMakeLists.txt
core/: CMakeLists.txt
core/include/core/: error.h  result.h
core/src/: core.cpp
src/: example.cpp  main.cpp  vulkan-example.cpp
toolkit/: CMakeLists.txt
toolkit/include/toolkit/: app.h  assetserver.h  color.h  log.h  screen.h  thread_pool.h  ui.h  window.h
toolkit/include/toolkit/render/: commands.h  renderer.h  skia_bridge.h
toolkit/include/toolkit/ui/: events.h  geometry.h  image.h  painter.h
toolkit/include/toolkit/util/: function_traits.h
toolkit/src/: app.cpp  assetserver.cpp  screen.cpp  ui.cpp  window.cpp
toolkit/src/render/: renderer.cpp
